[package]
name = "rle_vec"
version = "0.3.0" # remember to update html_root_url
authors = ["Arno Velds <avelds@gmail.com>"]
repository = "https://github.com/veldsla/rle_vec"
homepage = "https://github.com/veldsla/rle_vec"
documentation = "https://docs.rs/rle_vec/"
keywords = ["rle", "vec", "vector", "rlevec"]
categories = ["data-structures"]
license = "MIT"
description = """
A vector like struct that stores data as runs of identical values. Useful for storing sparse data.
"""

[dependencies]
