[package]
name = "rle_vec"
version = "0.4.0" # remember to update html_root_url
authors = ["Arno Velds <avelds@gmail.com>", "Kerollmops <renault.cle@gmail.com>"]
repository = "https://github.com/veldsla/rle_vec"
homepage = "https://github.com/veldsla/rle_vec"
readme = "README.md"
documentation = "https://docs.rs/rle_vec/"
keywords = ["rle", "vec", "vector", "rlevec"]
categories = ["data-structures"]
license = "MIT"
description = """
A vector like struct that stores data as runs of identical values. Useful for storing sparse data.
"""

[features]
serialize = ["serde", "serde_derive"]

[dependencies]
serde_derive = { version="1.0", optional=true }
serde = { version="1.0", optional=true }
